language/move-lang/tests/move_check/typing/implicit_deref_borrow_field_from_non_struct.exp
error[E04009]: expected specific type
  ┌─ tests/move_check/typing/implicit_deref_borrow_field_from_non_struct.move:6:9
  │
6 │         0.f;
  │         ^^^
  │         │
  │         Unbound field 'f'
  │         Expected a struct type in the current module but got: integer

error[E04009]: expected specific type
  ┌─ tests/move_check/typing/implicit_deref_borrow_field_from_non_struct.move:7:9
  │
7 │         0.g;
  │         ^^^
  │         │
  │         Unbound field 'g'
  │         Expected a struct type in the current module but got: integer

error[E04009]: expected specific type
  ┌─ tests/move_check/typing/implicit_deref_borrow_field_from_non_struct.move:8:9
  │
5 │     fun t0(u: u64, cond: bool, addr: address) {
  │               --- Expected a struct type in the current module but got: 'u64'
  ·
8 │         u.value;
  │         ^^^^^^^ Unbound field 'value'

error[E04009]: expected specific type
  ┌─ tests/move_check/typing/implicit_deref_borrow_field_from_non_struct.move:9:9
  │
5 │     fun t0(u: u64, cond: bool, addr: address) {
  │                          ---- Expected a struct type in the current module but got: 'bool'
  ·
9 │         cond.value;
  │         ^^^^^^^^^^ Unbound field 'value'

error[E04009]: expected specific type
   ┌─ tests/move_check/typing/implicit_deref_borrow_field_from_non_struct.move:10:9
   │
 5 │     fun t0(u: u64, cond: bool, addr: address) {
   │                                      ------- Expected a struct type in the current module but got: 'address'
   ·
10 │         addr.R;
   │         ^^^^^^ Unbound field 'R'

error[E04009]: expected specific type
   ┌─ tests/move_check/typing/implicit_deref_borrow_field_from_non_struct.move:11:9
   │
 5 │     fun t0(u: u64, cond: bool, addr: address) {
   │                                      ------- Expected a struct type in the current module but got: 'address'
   ·
11 │         addr.f;
   │         ^^^^^^ Unbound field 'f'

error[E04005]: expected a single type
   ┌─ tests/move_check/typing/implicit_deref_borrow_field_from_non_struct.move:12:9
   │
12 │         ().R;
   │         ^^
   │         │
   │         Invalid dot access
   │         Expected a single type, but found expression list type: '()'

error[E04009]: expected specific type
   ┌─ tests/move_check/typing/implicit_deref_borrow_field_from_non_struct.move:12:9
   │
12 │         ().R;
   │         ^^^^
   │         │
   │         Unbound field 'R'
   │         Expected a struct type in the current module but got: '()'

error[E04005]: expected a single type
   ┌─ tests/move_check/typing/implicit_deref_borrow_field_from_non_struct.move:13:9
   │
13 │         (S{f: 0}, S{f:0}).f;
   │         ^^^^^^^^^^^^^^^^^
   │         │
   │         Invalid dot access
   │         Expected a single type, but found expression list type: '(0x8675309::M::S, 0x8675309::M::S)'

error[E04009]: expected specific type
   ┌─ tests/move_check/typing/implicit_deref_borrow_field_from_non_struct.move:13:9
   │
13 │         (S{f: 0}, S{f:0}).f;
   │         ^^^^^^^^^^^^^^^^^^^
   │         │
   │         Unbound field 'f'
   │         Expected a struct type in the current module but got: '(0x8675309::M::S, 0x8675309::M::S)'

